--- a/package.json
+++ b/package.json
@@ -1,13 +1,59 @@
 {
-  "name": "Test",
-  "description": "Test",
-  "version": "0.0.0",
-  "main": "bot.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "requires": true,
+  "lockfileVersion": 1,
   "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0"
+    "ffmpeg": {
+      "version": "0.0.4",
+      "resolved": "https://registry.npmjs.org/ffmpeg/-/ffmpeg-0.0.4.tgz",
+      "integrity": "sha1-HEYN+OfaUSf2LO70v6BsWciWMMs=",
+      "requires": {
+        "when": ">= 0.0.1"
+      }
+    },
+    "html-entities": {
+      "version": "1.2.1",
+      "resolved": "https://registry.npmjs.org/html-entities/-/html-entities-1.2.1.tgz",
+      "integrity": "sha1-DfKTUfByEWNRXfueVUPl9u7VFi8="
+    },
+    "m3u8stream": {
+      "version": "0.4.2",
+      "resolved": "https://registry.npmjs.org/m3u8stream/-/m3u8stream-0.4.2.tgz",
+      "integrity": "sha512-VZeobA83iQdd2TY12K2DNLuUmE1XNjN660SYU9s6A4kP7ZhFEp/bQPUpOWU2EbkFYwsonyaFT+RxLDr1OhPTRA==",
+      "requires": {
+        "miniget": "^1.4.0",
+        "sax": "^1.2.4"
+      }
+    },
+    "miniget": {
+      "version": "1.5.0",
+      "resolved": "https://registry.npmjs.org/miniget/-/miniget-1.5.0.tgz",
+      "integrity": "sha512-RbRCj2m8Q/arS1nExuMB8qO4QavCpvfetQR+HVCeHGiFJGOryPn8u0z4WrIx9AAIDYFDVcFhQsRYvSY+UA5HJQ=="
+    },
+    "opusscript": {
+      "version": "0.0.6",
+      "resolved": "https://registry.npmjs.org/opusscript/-/opusscript-0.0.6.tgz",
+      "integrity": "sha512-F7nx1SWZCD5Rq2W+5Fx39HlkRkz/5Zqt0LglEB9uHexk8HjedDEiM+u/Y2rBfDFcS/0uQIWu2lJhw+Gjsta+cA=="
+    },
+    "sax": {
+      "version": "1.2.4",
+      "resolved": "https://registry.npmjs.org/sax/-/sax-1.2.4.tgz",
+      "integrity": "sha512-NqVDv9TpANUjFm0N8uM5GxL36UgKi9/atZw+x7YFnQ8ckwFGKrl4xX4yWtrey3UJm5nP1kUbnYgLopqWNSRhWw=="
+    },
+    "when": {
+      "version": "3.7.8",
+      "resolved": "https://registry.npmjs.org/when/-/when-3.7.8.tgz",
+      "integrity": "sha1-xxMLan6gRpPoQs3J56Hyqjmjn4I="
+    },
+    "ytdl-core": {
+      "version": "0.26.1",
+      "resolved": "https://registry.npmjs.org/ytdl-core/-/ytdl-core-0.26.1.tgz",
+      "integrity": "sha512-p6mZQRI704Tl/yZoYB3j1rSJj7sSKSLJ567FUUbRkqNhmAXgASIERjROBzo9eYwrV/ZNbZ0+jSG6kvK3MASf2Q==",
+      "requires": {
+        "html-entities": "^1.1.3",
+        "m3u8stream": "^0.4.2",
+        "miniget": "^1.4.0",
+        "sax": "^1.1.3"
+      }
+    }
   }
 }
